files/deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  selector:
    app: test-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
