files/deployment_hpa_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
spec:
  type: NodePort
  selector:
    app: test-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
